[package]
name = "darkbio-crypto"
version = "0.11.0"
authors = ["Péter Szilágyi <peter@dark.bio>"]
description = "Cryptography primitives and wrappers"
repository = "https://github.com/dark-bio/crypto-rs"
documentation = "https://docs.rs/darkbio-crypto"
categories = ["cryptography", "encoding"]
keywords = ["c-mldsa", "x-wing", "stream"]
license = "BSD-3-Clause"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
argon2 = ["dep:argon2"]
async = ["dep:futures"]
cbor = []
eddsa = ["dep:ed25519-dalek", "dep:sha2", "dep:signature"]
mldsa = ["dep:der", "dep:ml-dsa", "dep:pem", "dep:pkcs8", "dep:sha2", "dep:spki"]
rand = []
rsa = ["dep:rsa", "dep:signature"]
stream = ["dep:age-core", "dep:chacha20poly1305", "dep:pin-project", "dep:zeroize"]
x509 = ["xdsa", "dep:bcder", "dep:bytes", "dep:chrono", "dep:ring", "dep:x509-certificate"]
xdsa = ["eddsa", "mldsa", "x509", "dep:x509-parser"]
xhpke = ["xdsa", "dep:generic-array", "dep:hpke", "dep:rand", "dep:rand_chacha", "dep:x-wing"]
xutil = ["cbor", "xhpke"]

[dependencies]
age-core = { version = "0.11.0", optional = true }
argon2 = { version = "0.5.3", optional = true }
bcder = { version = "0.7.5", optional = true }
bytes = { version = "1.10.1", optional = true }
chacha20poly1305 = { version = "0.10.1", optional = true }
chrono = { version = "0.4.41", optional = true }
der = { version = "0.7.10", features = ["derive"], optional = true }
ed25519-dalek = { version = "2.2.0", features = ["pem", "rand_core"], optional = true }
ml-dsa = { version = "0.1.0-rc.2", features = ["rand_core"], optional = true }
futures = { version = "0.3", optional = true }
generic-array = { version = "0.14.7", optional = true }
getrandom02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
hpke = { version = "0.13.0", features = ["std"], optional = true }
pem = { version = "3.0.5", optional = true }
pin-project = { version = "1.1.9", optional = true }
pkcs8 = { version = "0.10.2", features = ["std"], optional = true }
rand = { version = "0.9.2", optional = true }
rand_chacha = { version = "0.9.0", optional = true }
ring = { version = "0.17.14", features = ["wasm32_unknown_unknown_js"], optional = true }
rsa = { version = "0.9.8", features = ["sha2"], optional = true }
sha2 = { version = "0.10.9", optional = true }
signature = { version = "2.2.0", features = ["rand_core"], optional = true }
spki = { version = "0.7.3", features = ["alloc"], optional = true }
x-wing = { version = "0.1.0-pre.2", optional = true }
x509-certificate = { version = "0.25.0", optional = true }
x509-parser = { version = "0.18.0", optional = true }
zeroize = { version = "1.8.1", optional = true }

[[example]]
name = "demo"
required-features = ["xutil"]

[dev-dependencies]
futures-test = "0.3"
hex = "0.4"
tokio = { version = "1.0", features = ["rt", "macros"] }
