[package]
name = "darkbio-crypto"
version = "0.11.3"
authors = ["Péter Szilágyi <peter@dark.bio>"]
description = "Cryptography primitives and wrappers"
repository = "https://github.com/dark-bio/crypto-rs"
documentation = "https://docs.rs/darkbio-crypto"
categories = ["cryptography", "encoding"]
keywords = ["post-quantum", "c-mldsa", "x-wing", "hpke", "cose"]
license = "BSD-3-Clause"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = [".", "src/cbor/derive"]
exclude = ["fuzz"]

[features]
default = []
argon2 = ["dep:argon2"]
cbor = ["dep:thiserror", "dep:darkbio-crypto-cbor-derive"]
cose = ["cbor", "xhpke"]
eddsa = [
    "pem",
    "dep:der",
    "dep:ed25519-dalek",
    "dep:pkcs8",
    "dep:serde",
    "dep:sha2",
    "dep:signature",
    "dep:spki",
]
hkdf = ["dep:hkdf", "dep:sha2"]
mldsa = [
    "pem",
    "dep:der",
    "dep:ml-dsa",
    "dep:pkcs8",
    "dep:serde",
    "dep:sha2",
    "dep:spki",
    "dep:subtle",
    "dep:zeroize",
]
pem = ["dep:base64"]
rand = []
rsa = ["pem", "dep:rsa", "dep:serde", "dep:signature"]
stream = ["dep:age-core", "dep:chacha20poly1305", "dep:pin-project", "dep:zeroize"]
x509 = ["xdsa", "dep:chrono", "dep:const-oid", "dep:sha1", "dep:x509-cert"]
xdsa = ["pem", "eddsa", "mldsa", "x509", "dep:x509-parser"]
xhpke = [
    "pem",
    "xdsa",
    "dep:generic-array",
    "dep:hpke",
    "dep:rand",
    "dep:rand_chacha",
    "dep:serde",
    "dep:x-wing",
]

[dependencies]
age-core = { version = "0.11.0", optional = true }
argon2 = { version = "0.5.3", optional = true }
base64 = { version = "0.22.1", optional = true }
chacha20poly1305 = { version = "0.10.1", optional = true }
chrono = { version = "0.4.41", optional = true }
const-oid = { version = "0.9.6", optional = true }
darkbio-crypto-cbor-derive = { version = "0.11.3", path = "src/cbor/derive", optional = true }
der = { version = "0.7.10", features = ["derive"], optional = true }
ed25519-dalek = { version = "2.2.0", features = ["pem", "rand_core"], optional = true }
generic-array = { version = "0.14.7", optional = true }
getrandom = { version = "0.4.0-rc.0", features = ["wasm_js"] }
getrandom02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom03 = { package = "getrandom", version = "0.3.4", features = ["wasm_js"] }
hkdf = { version = "0.12.4", optional = true }
hpke = { version = "0.13.0", features = ["std"], optional = true }
ml-dsa = { version = "0.1.0-rc.3", features = ["rand_core"], optional = true }
pin-project = { version = "1.1.9", optional = true }
pkcs8 = { version = "0.10.2", features = ["std"], optional = true }
rand = { version = "0.9.2", optional = true }
rand_chacha = { version = "0.9.0", optional = true }
rand_core = { version = "=0.10.0-rc-3", default-features = false }
rsa = { version = "0.9.8", features = ["sha2"], optional = true }
serde = { version = "1.0", optional = true }
sha1 = { version = "0.10.6", optional = true }
sha2 = { version = "0.10.9", optional = true }
signature = { version = "2.2.0", features = ["rand_core"], optional = true }
spki = { version = "0.7.3", features = ["alloc"], optional = true }
subtle = { version = "2.6", optional = true }
thiserror = { version = "2.0.17", optional = true }
web-time = "1.1.0"
x-wing = { version = "0.1.0-pre.3", features = ["getrandom", "zeroize"], optional = true }
x509-cert = { version = "0.2.5", optional = true }
x509-parser = { version = "0.18.0", optional = true }
zeroize = { version = "1.8.1", optional = true }

[dev-dependencies]
hex = "0.4"

[[example]]
name = "demo"
required-features = ["cose"]
