[package]
name = "darkbio-crypto-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.darkbio-crypto]
path = ".."
features = ["cbor"]

[[bin]]
name = "cbor"
path = "fuzz_targets/cbor.rs"
test = false
doc = false
bench = false
