[package]
name = "darkbio-crypto-cbor-derive"
version = "0.14.0"
authors = ["Péter Szilágyi <peter@dark.bio>"]
description = "CBOR derive macros for darkbio-crypto"
repository = "https://github.com/dark-bio/crypto-rs"
license = "BSD-3-Clause"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
